# src

./: README.md
arraque_robot/launch/: arranque.launch.py
robot_cuerpo/: CMakeLists.txt  package.xml
robot_cuerpo/launch/: display.launch.py
robot_cuerpo/urdf/: robot.urdf.xacro  test.urdf.xacro  test_2.urdf.xacro
robot_motor/: CMakeLists.txt  package.xml
robot_motor/robot_motor/: control_serial.py  drive_control.py  drive_control_pid.py
robot_odometry/: CMakeLists.txt  package.xml
robot_odometry/robot_odometry/: odom_publisher.py  odom_publisher_battery.py  odom_publisher_test.py
